--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="webbox">
 		<div class="pag_btn clearfix" id="pag_btn" >
-			<a href="javascript:;">首页</a>
+			<a href="javascript:;">首</a>
 			<a href="javascript:;">作品</a>
 			<a href="javascript:;">技能</a>
 			<a href="javascript:;">关于</a>
