--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>个人主页</title>
+<title>Hello !</title>
 <link href="css/common.css" rel="stylesheet"/>
+<link href="css/animate.css" rel="stylesheet"/>
 <link href="css/index.css" rel="stylesheet"/>
 <script src="js/common.js"></script>
 <script src="js/index.js"></script>
@@ -14,7 +15,8 @@
 
 </head>
 <style>
-    #page, #works, .art ,#me{background: url(1.png) no-repeat; overflow:hidden;}
+    #page ,#works, #me{background: url(1.png) no-repeat; overflow:hidden;}
+    .art{background: url(1.jpg) no-repeat; overflow:hidden; background-size:100%;}
     .list li{width:60px; height:30px; background:url(img/bg.png) left top repeat-x; line-height:30px; text-align:center; font-size:12px;}
     .list .active{background:url(img/bg2.png) left top repeat-x; color:#FFF;}
 </style>
@@ -26,6 +28,9 @@
         <a href="javascript:;" id="p3">Html5</a>
         <a href="javascript:;" id="p4">关于</a>
     </div>
+
+    <div class="animated hinge hinge1"></div>
+    <div class="animated hinge  hinge2"></div>
     
     <ul id="web" class="web">
         <li class="art">
@@ -185,7 +190,7 @@
                         </a>
                     </li>
                     <li>
-                      <a href="tab/boom.html">
+                      <a href="table/boom.html">
                             <img src="images/present/6.png" alt=""/>
                             <div>
                                 <i class="pre_bg"></i>
@@ -228,10 +233,10 @@
                 <a href="javascript:;" class="resume">请点击this查看我的在线简历,也可直接下载</a>
                 <div class="clearFix ds">
                 	<div id="res" class="fl">
-                        <a href="resume.html" class="resume_btn">this</a>
+                        <a href="Resume.html" class="resume_btn">this</a>
                         <span id="res_ball"></span>
                 	</div>
-                	<a href="qizhenzhen-resume.doc" class="download fl" id="download">下载</a>
+                	<a href="Gongxiaotong-Resume.doc" class="download fl" id="download">下载</a>
                 </div>
             </div>
             
